--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "react-dom": "^18",
     "react-hook-form": "^7.52.1",
     "react-icons": "^4.12.0",
+    "react-tooltip": "^5.28.0",
     "sonner": "^1.5.0",
     "swiper": "^11.1.5",
     "tailwind-merge": "^2.4.0",
