--- a/package.json
+++ b/package.json
@@ -37,11 +37,13 @@
     "next-themes": "^0.3.0",
     "nookies": "^2.5.2",
     "react": "^18",
+    "react-currency-input-field": "^3.8.0",
     "react-datepicker": "^7.3.0",
     "react-day-picker": "^8.10.1",
     "react-dom": "^18",
     "react-hook-form": "^7.52.1",
     "react-icons": "^4.12.0",
+    "react-number-format": "^5.4.2",
     "react-tooltip": "^5.28.0",
     "sonner": "^1.5.0",
     "swiper": "^11.1.5",
