--- a/package.json
+++ b/package.json
@@ -17,9 +17,11 @@
     "@radix-ui/react-icons": "^1.3.0",
     "@radix-ui/react-label": "^2.1.0",
     "@radix-ui/react-progress": "^1.1.0",
+    "@radix-ui/react-radio-group": "^1.2.1",
     "@radix-ui/react-scroll-area": "^1.2.0",
     "@radix-ui/react-select": "^2.1.1",
     "@radix-ui/react-separator": "^1.1.0",
+    "@radix-ui/react-slider": "^1.2.1",
     "@radix-ui/react-slot": "^1.1.0",
     "@radix-ui/react-switch": "^1.1.0",
     "@react-google-maps/api": "^2.19.3",
@@ -41,7 +43,7 @@
     "react-datepicker": "^7.3.0",
     "react-day-picker": "^8.10.1",
     "react-dom": "^18",
-    "react-hook-form": "^7.52.1",
+    "react-hook-form": "^7.53.1",
     "react-icons": "^4.12.0",
     "react-number-format": "^5.4.2",
     "react-tooltip": "^5.28.0",
